--- a/SmartOfficeMetro/SmartOfficeMetro/SmartOfficeMetro.csproj
+++ b/SmartOfficeMetro/SmartOfficeMetro/SmartOfficeMetro.csproj
@@ -106,6 +106,7 @@
       <DependentUpon>MailService.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\JSONObject.cs" />
+    <Compile Include="Model\UserManager.cs" />
     <Compile Include="Notifications.xaml.cs">
       <DependentUpon>Notifications.xaml</DependentUpon>
     </Compile>
@@ -119,7 +120,6 @@
       <DependentUpon>MainDelivery.xaml</DependentUpon>
     </Compile>
     <Compile Include="TcpClientTest.cs" />
-    <Compile Include="User.cs" />
     <Compile Include="ViewModel.cs" />
     <Page Include="Login.xaml">
       <SubType>Designer</SubType>
